<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="scanwedge_settings">ScanWedge Settings</string>
    <string name="about_scanwedge">About ScanWedge</string>
    <string name="datawedge_enable_title">ScanWedge</string>
    <string name="datawedge_enable_summaryon">Enable</string>
    <string name="datawedge_enable_summaryoff">Disable</string>
    <string name="datawedge_logging_enable_title">Enable logging </string>
    <string name="datawedge_logging_enable_summary">Enable debug output to logcat</string>
    <string name="settings_profile_title">"Profile: %1$s"</string>
    <string name="scanner_settings_title">Scanner Settings</string>
    <string name="scanwedge_version">"Version: %1$s"</string>
    <string name="scanning_framework">"Scanning Framework: %1$s"</string>
    <string name="decoder_library_engine">"Decoder Engine: %1$s"</string>
    <string name="dialog_delete_associate_app_title">Attention</string>
    <string name="dialog_delete_associate_app_message">Are you sure to remove %1$s form the associated apps list ?</string>
    <string name="dialog_delete_profile_title">Attention</string>
    <string name="dialog_delete_profile_message">Are you sure to remove profile "%1$s" ?</string>
    <string name="new_profile">New profile</string>
    <string name="dw_settings">Settings</string>
    <string name="dw_about">About</string>
    <string name="edit_profile">Edit profile</string>
    <string name="clone_profile">Clone profile</string>
    <string name="rename_profile">Rename profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="update_profile_message">Please input a new profile name</string>
    <string name="associated_add">Associate more app</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="product_sn">Product SN</string>
    <string name="product_sn_default">"set in misc"</string>
    <string name="urovo">"urovo"</string>
    <string name="urovo_settings">Support Scanners</string>
    <string name="scan_type">Scan Type</string>
    <string name="scan_type_summary">[ <xliff:g id="scan_type_entries">%1$s</xliff:g> ]</string>
    <string name="urovo_settings_title">Scanners</string>
    <string name="set_scanner_manager">Scanner</string>
    <string name="scanner">Scanner</string>
    <string name="scanner_control">Scanner Control</string>
    <string name="scanner_screen_on">"Screen off scanner is working"</string>
    <string name="scanner_separator">"Separator"</string>
    <string name="scanner_separator_summary">"GS1/DataMatrix Separator"</string>
    <string name="scanner_on">Turn on scanner power</string>
    <string name="scanner_off">Turn off scanner power</string>
    <string name="scanner_keyboard_mode">Keyboard mode</string>
    <string name="scanner_virtual_button_output">Virtual key output</string>
    <string name="scanner_virtual_button_summary">Suspension button</string>
    <string name="scanner_virtual_button_title">Suspension button on/off</string>
    <string name="scanner_wedge_mode">Output mode</string>
    <string name="scanner_output_mode">Keyboard output mode</string>
    <string name="scanner_keyboard_output">"Keyboard output"</string>
    <string name="scanner_keyboard_output_summary">output the barcode into the focused edit box</string>
    <string name="scanner_trigger_mode">"Triggering Modes"</string>
    <string name="scanner_trigger_mode_summary">"The laser is always on and decoding"</string>
    <string name="scanner_decode_feedback">Scan params</string>
    <string name="scanner_beep">Sounds</string>
    <string name="scanner_beep_summary">Play sound when the scan is successful</string>
    <string name="scanner_beep_custom">Audio file</string>
    <string name="scanner_beep_channel">Beep Volume Channel</string>
    <string name="scanner_vibrate">Vibrate</string>
    <string name="scanner_vibrate_summary">Vibrate when the scan is successful</string>
    <string name="scanner_wedge_intent_mode">Intent Output</string>
    <string name="scanner_wedge_intent_title">Output via intent</string>
    <string name="scanner_wedge_intent_summary">Data be sent to an application in the form of an implicit Intent</string>
    <string name="scanner_intent_stringlabel">Intent string extra</string>
    <string name="scanner_intent_action">Intent action</string>
    <string name="scanner_intent_categtoy">Intent categtoy</string>
    <string name="scanner_intent_recevier_foreground">Receiver forgeround flag</string>
    <string name="scanner_intent_recevier_summary">add forgeround flag to broadcast intent</string>
    <string name="scanner_keyboard_copy">"Clipboard"</string>
    <string name="scanner_keyboard_paste_action">Auto Paste</string>
    <string name="scanner_enter">Additional enter key</string>
    <string name="keyevent_enter_delay">Key event delay</string>
    <string name="output_data_delay">Output delay</string>
    <string name="output_data_character_delay">Characters delay</string>
    <string name="scanner_enter_summary">Additional enter key after the scan results</string>
    <string name="scanner_action_key_character">Action key character</string>
    <string name="scanner_out_editortext_mode">Editor text mode</string>
    <string name="scanner_lock">Scan key</string>
    <string name="scanner_lock_on">Enable Scan key</string>
    <string name="scanner_lock_off">Disable Scan key</string>
    <string name="n6603_Enable_GS_Window">"Special Character GS Code Settings"</string>
    <string name="scanner_app_on">Enable Scan App</string>
    <string name="scanner_app_off">Disable Scan App</string>
    <string name="scanner_app">Scan App</string>
    <string name="scanner_reset_def">Reset Configuration</string>
    <string name="scanner_reset_def_summary">Reset the decoding subsystem configuration </string>
    <string name="scanner_reset_def_alert">Reset the decoding subsystem configuration?</string>
    <string name="lable_ocr_symbology">OCR Scan</string>
    <string name="lable_ocr_symbology_template_font">OCR Template Font</string>
    <string name="lable_ocr_symbology_template_character">OCR Template Character</string>
    <string name="lable_ocr_symbology_template_font_length">OCR label length(1-50)</string>
    <string name="import_config_keys">Import Profile</string>
    <string name="export_config_keys">Export Profile</string>
    <string name="import_config_keys_summary">Import ScanWedge Profile</string>
    <string name="export_config_keys_summary">Export ScanWedge Profile</string>
    <string name="scanner_symbology_code11">Code 11</string>
    <string name="scanner_symbology_chinese_25">Chinese 25</string>
    <string name="scanner_symbology_upc_e1">UPC-E1</string>
    <string name="scanner_symbology_aztec">Aztec</string>
    <string name="scanner_symbology_codabar">Codabar</string>
    <string name="scanner_symbology_code128">Code 128</string>
    <string name="scanner_symbology_gs1_128">GS1-128</string>
    <string name="scanner_symbology_code39">Code 39</string>
    <string name="scanner_symbology_code93">Code 93</string>
    <string name="scanner_symbology_composite_cc_ab">Composite CC-A/B</string>
    <string name="scanner_symbology_composite_cc_c">Composite CC-C</string>
    <string name="scanner_symbology_composite_39">Composite TLC-39</string>
    <string name="scanner_symbology_hanxin">Han Xin</string>
    <string name="scanner_symbology_Datamatrix">Datamatrix</string>
    <string name="scanner_symbology_ean13">EAN-13</string>
    <string name="scanner_symbology_ean8">EAN-8</string>
    <string name="scanner_symbology_gs1_databar14">GS1 DataBar-14</string>
    <string name="scanner_symbology_gs1_databar_expanded">GS1 DataBar Expanded</string>
    <string name="scanner_symbology_gs1_databar_limited">GS1 DataBar Limited</string>
    <string name="scanner_symbology_interleaved_25">Interleaved 2 of 5</string>
    <string name="scanner_symbology_matrix_25">Matrix 2 of 5</string>
    <string name="scanner_symbology_maxicode">Maxicode</string>
    <string name="scanner_symbology_micropdf417">MicroPDF417</string>
    <string name="scanner_symbology_MSI">MSI</string>
    <string name="scanner_symbology_code32">Code 32</string>
    <string name="scanner_symbology_pdf417">PDF417</string>
    <string name="scanner_symbology_postal">Postal codes</string>
    <string name="scanner_symbology_qrcode">QR Code</string>
    <string name="scanner_symbology_micro_qrcode">Micro QR Code</string>
    <string name="scanner_symbology_discrete_25">Discrete 2 of 5</string>
    <string name="scanner_symbology_trioptic">Trioptic</string>
    <string name="scanner_symbology_upc_a">UPC-A</string>
    <string name="scanner_symbology_upc_e">UPC-E</string>
    <string name="scanner_symbology_upc_ena_extensions">UPC/EAN Extensions</string>
    <string name="scanner_1d_special">1D special</string>
    <string name="scanner_fuzzy_1d_processing">Fuzzy 1D processing</string>
    <string name="scanner_1d_inverse">1D inverse decoder</string>
    <string name="scanner_multi_decode">Multi decode</string>
    <string name="scanner_multi_decode_mode">Multi decode mode</string>
    <string name="scanner_bar_codes_to_read">Bar codes to read</string>
    <string name="scanner_full_read_mode">Full read mode</string>
    <string name="scanner_trigger_reading">Reader params</string>
    <string name="scanner_laser_on_time">Beam Timer</string>
    <string name="scanner_timeout_same_symbol">Timeout between same symbol</string>
    <string name="scanner_type_security_level">Linear code type security level</string>
    <string name="scanner_symbology_dotcode">DotCode</string>
    <string name="scanner_exposure_setting">Exposure Settings</string>
    <string name="scanner_exposure_mode">Exposure Mode</string>
    <string name="scanner_exposure_fixed_title">Fixed Exposure</string>
    <string name="n6603_title_lights_config">Lights Configuration</string>
    <string name="n6603_decoce_windowing">Decode Windowing</string>
    <string name="n6603_configure_windowing">Configure Windowing</string>
    <string name="n6603_centering_mode_title">Mode Configuration</string>
    <string name="n6603_centering_mode_summary">For Centering Mode</string>
    <string name="n6603_UpperLeftWindowX">UpperLeftWindowX</string>
    <string name="n6603_UpperLeftWindowY">UpperLeftWindowY</string>
    <string name="n6603_LowerRightWindowX">LowerRightWindowX</string>
    <string name="n6603_LowerRightWindowY">LowerRightWindowY</string>
    <string name="n6603_UpperLeftWindowX_summary">Sets the upper left X value</string>
    <string name="n6603_UpperLeftWindowY_summary">Sets the upper left Y value</string>
    <string name="n6603_LowerRightWindowX_summary">Sets the lower_right X value</string>
    <string name="n6603_LowerRightWindowY_summary">Sets the lower_right Y value</string>
    <string name="n6603_Enable_Debug_Window">Enable Debug Window</string>
    <string name="se4500_dec_picklist_aim_mode">Picklist Mode</string>
    <string name="se4500_illum_power_level">Illumination Power Level</string>
    <string name="n3680_aimer_delay">Aimer Delay</string>
    <string name="n6603_multiple_decode_config">Continuous Decode Config</string>
    <string name="n6603_multiple_decode_mode">Continuous scan mode </string>
    <string name="n6603_multiple_decode_count">MultiRead count</string>
    <string name="n6603_multiple_decode_count_sum">Sets the maximum number(1~100 times) of multiple barcodes to read</string>
    <string name="n6603_multiple_decode_timeout">Time out(50~60000 ms) allow duplicate barcode </string>
    <string name="n6603_multiple_decode_timeout_sum">This option is ignored if scan mode always allow duplicate.</string>
    <string name="n6603_multiple_decode_interval">Interval time(50~5000 ms) allow continuous scan </string>
    <string name="n6603_multiple_decode_interval_sum">50</string>
</resources>