<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:google="http://google.com"
    android:title="@string/scanner_trigger_reading">

    <PreferenceCategory
        android:key="scanner_read_trigger"
        android:title="@string/scanner_trigger_reading">
        <Preference
            android:key="laser_on_time"
            android:title="@string/scanner_laser_on_time" />
        <Preference
            android:key="timeout_same_symbol"
            android:title="@string/scanner_timeout_same_symbol" />
        <ListPreference
            android:entries="@array/linear_security_level_entries"
            android:entryValues="@array/linear_security_level_values"
            android:key="linear_code_type_security_level"
            android:persistent="false"
            android:title="@string/scanner_type_security_level" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="scanner_1d_special"
        android:title="@string/scanner_1d_special">
        <CheckBoxPreference
            android:key="scanner_fuzzy_1d_processing"
            android:persistent="false"
            android:title="@string/scanner_fuzzy_1d_processing" />
        <ListPreference
            android:entries="@array/image_inverse_decoder_entries"
            android:entryValues="@array/image_inverse_decoder_values"
            android:key="scanner_1d_inverse"
            android:persistent="false"
            android:title="@string/scanner_1d_inverse" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="scanner_multi_decode"
        android:title="@string/scanner_multi_decode">
        <CheckBoxPreference
            android:key="multi_decode_mode"
            android:persistent="false"
            android:title="@string/scanner_multi_decode_mode" />
        <ListPreference
            android:dependency="multi_decode_mode"
            android:entries="@array/image_bar_cades_to_read_entries"
            android:entryValues="@array/image_bar_cades_to_read_values"
            android:key="bar_codes_to_read"
            android:persistent="false"
            android:title="@string/scanner_bar_codes_to_read" />
        <CheckBoxPreference
            android:dependency="multi_decode_mode"
            android:key="full_read_mode"
            android:persistent="false"
            android:title="@string/scanner_full_read_mode" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="scanner_config_exposure"
        android:title="@string/scanner_exposure_setting">

        <!-- android:summary="@string/n6603_title_lights_config_summary"-->
        <ListPreference
            android:defaultValue="3"
            android:entries="@array/n6603_lights_config_values_titles"
            android:entryValues="@array/n6603_lights_config_values"
            android:key="n6603_lightsConfig"
            android:title="@string/n6603_title_lights_config" />

        <ListPreference
            android:entries="@array/scanner_exposure_mode_entries"
            android:entryValues="@array/scanner_exposure_mode_values"
            android:key="scanner_exposure_mode"
            android:persistent="false"
            android:title="@string/scanner_exposure_mode" />

        <EditTextPreference
            android:inputType="number"
            android:key="scanner_fixed_exposure_level"
            android:title="@string/scanner_exposure_fixed_title" />
        <Preference
            android:key="dec_illum_power_level"
            android:title="@string/se4500_illum_power_level" />
    </PreferenceCategory>
    <!-- Decode 4500 -->
    <CheckBoxPreference
        android:key="dec_picklist_aim_mode"
        android:persistent="false"
        android:title="@string/se4500_dec_picklist_aim_mode" />
    <Preference
        android:key="dec_aim_mode_delay"
        android:title="@string/n3680_aimer_delay" />
    <!-- Decode Windowing -->
    <PreferenceCategory
        android:key="n6603_decoce_windowing"
        android:title="@string/n6603_decoce_windowing">
        <!-- Enable/Disable -->
        <CheckBoxPreference
            android:key="n6603_decode_centering_enable"
            android:title="@string/n6603_configure_windowing" />
        <!-- Windowing Mode -->
        <ListPreference
            android:defaultValue="2"
            android:dependency="n6603_decode_centering_enable"
            android:entries="@array/n6603_centering_mode_entries"
            android:entryValues="@array/n6603_centering_mode_values"
            android:key="decode_centering_mode"
            android:summary="@string/n6603_centering_mode_summary"
            android:title="@string/n6603_centering_mode_title" />
        <!-- Upper Left X -->
        <EditTextPreference
            android:defaultValue="0"
            android:dependency="n6603_decode_centering_enable"
            android:inputType="number"
            android:key="decode_window_upper_left_x"
            android:summary="@string/n6603_UpperLeftWindowX_summary"
            android:title="@string/n6603_UpperLeftWindowX" />
        <!-- Upper Left Y -->
        <EditTextPreference
            android:defaultValue="0"
            android:dependency="n6603_decode_centering_enable"
            android:inputType="number"
            android:key="decode_window_upper_left_y"
            android:summary="@string/n6603_UpperLeftWindowY_summary"
            android:title="@string/n6603_UpperLeftWindowY" />
        <!-- Lower Right X -->
        <EditTextPreference
            android:defaultValue="0"
            android:dependency="n6603_decode_centering_enable"
            android:inputType="number"
            android:key="decode_window_lower_right_x"
            android:summary="@string/n6603_LowerRightWindowX_summary"
            android:title="@string/n6603_LowerRightWindowX" />
        <!-- Lower Right Y -->
        <EditTextPreference
            android:defaultValue="0"
            android:dependency="n6603_decode_centering_enable"
            android:inputType="number"
            android:key="decode_window_lower_right_y"
            android:summary="@string/n6603_LowerRightWindowY_summary"
            android:title="@string/n6603_LowerRightWindowY" />
        <!-- Debug Window -->
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="n6603_decode_centering_enable"
            android:key="decode_debug_window_enable"
            android:title="@string/n6603_Enable_Debug_Window" />
    </PreferenceCategory>
</PreferenceScreen>
